--- a/pages/popup/src/index.css
+++ b/pages/popup/src/index.css
@@ -2,15 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  height: 100%;
+/* Disable rubberband scrolling on all scrollable elements */
+* {
+  overscroll-behavior: none;
 }
 
-body {
-  width: 350px;
-  height: 600px;
+/* Ensure app container fills entire height */
+#app-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+html, body {
   margin: 0;
-  position: relative;
+  padding: 0;
+  width: 400px;
+  height: 600px;
+  overflow: hidden;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -27,11 +36,9 @@ body {
 }
 
 .App {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  text-align: center;
+  overflow: hidden;
 }
